# DIO

./: README.md
Bootcamp-Santander-2025/: sistema-bancario.py  sistema-bancario2.py
Python-Backend/3-FullStack-Django/mysite/: db.sqlite3  pyproject.toml
Python-Backend/3-FullStack-Django/mysite/mysite/: admin.py  settings.py  urls.py
Python-Backend/3-FullStack-Django/mysite/polls/: admin.py  models.py  views.py
Python-Backend/3-FullStack-Django/mysite/polls/migrations/: 0001_initial.py  0002_question_active.py
Python-Backend/3-FullStack-Django/mysite/polls/templates/polls/: detail.html
Python-Backend/4-API Assincrona FastAPI/: notes.txt
Python-Backend/4-API Assincrona FastAPI/dio-blog/: blog.db  database.py  main.py  pyproject.toml
Python-Backend/4-API Assincrona FastAPI/dio-blog/controllers/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/models/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/schemas/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/src/: exceptions.py  main.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/src/controllers/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/src/models/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/src/schemas/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/src/services/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/src/views/: post.py
Python-Backend/4-API Assincrona FastAPI/dio-blog/views/: post.py
