[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludwig S",email = "silvaludwig@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
